manifests/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanbora-api-ingress
  namespace: vanbora
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - vanbora.cerebrumdev.com
      secretName: vanbora-api-tls
  rules:
  - host: vanbora.cerebrumdev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vanbora-api
            port:
              number: 8000
